--- a/projects/react-from-scratch/index.html
+++ b/projects/react-from-scratch/index.html
@@ -8,6 +8,6 @@
   <body>
     <h1>React From Scratch</h1>
     <div id="root"></div>
-    <script src="index.js"></script>
+    <script src="dist/bundle.js"></script>
   </body>
 </html>
